--- a/ntp/pom.xml
+++ b/ntp/pom.xml
@@ -45,5 +45,9 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
     </dependency>
+    <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+    </dependency>
   </dependencies>
 </project>
