--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,16 @@
 	    <artifactId>commons-lang3</artifactId>
 	    <version>3.8.1</version>
 	</dependency>
+	<dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.30</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.30</version>
+      </dependency>
 	</dependencies>
   </dependencyManagement>
   
