--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.pjia.wrvs.plugins</groupId>
   <artifactId>plugins-parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>12.3.1.0</version>
   <packaging>pom</packaging>
 
   <name>plugins-parent</name>
@@ -94,5 +94,6 @@
   
   <modules>
     <module>ntp</module>
+    <module>client</module>
   </modules>
 </project>
