--- a/ntp/pom.xml
+++ b/ntp/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.pjia.wrvs.plugins</groupId>
     <artifactId>plugins-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>12.3.1.0</version>
   </parent>
   
   <artifactId>ntp</artifactId>
@@ -57,6 +57,11 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
       </dependency>
+      <dependency>
+        <groupId>org.pjia.wrvs.plugins</groupId>
+        <artifactId>client</artifactId>
+        <version>12.3.1.0</version>
+    </dependency>
   </dependencies>
   
   <build>
