--- a/ntp/src/main/resources/log4j.properties
+++ b/ntp/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=[%p] %-d{yyyy-MM-dd HH:mm:ss} [%t:%L] %37c %3x - %m%n
 
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=${user.home}/logs/plugins.ntp.log
+log4j.appender.file.File=${user.home}/WRVSPlugins/plugins.ntp.log
 log4j.appender.file.Append=false
 log4j.appender.file.encoding=UTF-8
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
