--- a/ntp/src/main/resources/log4j.properties
+++ b/ntp/src/main/resources/log4j.properties
@@ -1,4 +1,6 @@
 log4j.rootLogger=error, console, file
+log4j.logger.org.pjia.wrvs.plugins.ntp=debug, console, file
+#log4j.logger.org.pjia.wrvs.plugins.client=debug, file
  
 log4j.appender.console = org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
@@ -11,3 +13,4 @@ log4j.appender.file.Append=false
 log4j.appender.file.encoding=UTF-8
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[%p] %-d{yyyy-MM-dd HH:mm:ss} [%t:%L] %37c %3x - %m%n
+
