--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 	    <version>3.8.1</version>
 	</dependency>
 	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.4</version>
+    </dependency>
+	<dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>1.7.30</version>
