抽出 PluginEvent 组件

--- a/ntp/src/main/resources/log4j.properties
+++ b/ntp/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger=error, console, file
-log4j.logger.org.pjia.wrvs.plugins.ntp=debug, console, file
+log4j.logger.org.pjia.wrvs.plugins=debug, console, file
 #log4j.logger.org.pjia.wrvs.plugins.client=debug, file
  
 log4j.appender.console = org.apache.log4j.ConsoleAppender
