--- a/pom.xml
+++ b/pom.xml
@@ -94,16 +94,12 @@
         <artifactId>slf4j-log4j12</artifactId>
         <version>1.7.30</version>
       </dependency>
-        <dependency>
-	        <groupId>junit</groupId>
-		    <artifactId>junit</artifactId>
-		    <version>4.12</version>
-        </dependency>
 	</dependencies>
   </dependencyManagement>
   
   <modules>
     <module>ntp</module>
     <module>client</module>
+    <module>sample</module>
   </modules>
 </project>
