--- a/client/pom.xml
+++ b/client/pom.xml
@@ -5,15 +5,12 @@
   <parent>
     <groupId>org.pjia.wrvs.plugins</groupId>
     <artifactId>plugins-parent</artifactId>
-    <version>12.3.1.0</version>
+    <version>${wrvs.version}</version>
   </parent>
   <artifactId>client</artifactId>
   <name>client</name>
   <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
-  </properties>
+  
   <dependencies>
     <dependency>
         <groupId>org.projectlombok</groupId>
@@ -42,9 +39,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding> 
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding> 
                 </configuration>
             </plugin>
         </plugins>
