--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.pjia.wrvs.plugins</groupId>
     <artifactId>plugins-parent</artifactId>
-    <version>12.3.1.0</version>
+    <version>${wrvs.version}</version>
   </parent>
   <artifactId>sample</artifactId>
   <name>sample</name>
@@ -21,7 +21,6 @@
     <dependency>
         <groupId>org.pjia.wrvs.plugins</groupId>
         <artifactId>client</artifactId>
-        <version>12.3.1.0</version>
     </dependency>
     <dependency>
         <groupId>org.projectlombok</groupId>
@@ -49,9 +48,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding> 
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding> 
                 </configuration>
             </plugin>
             <plugin>
